--- a/calculadora/src/index.css
+++ b/calculadora/src/index.css
@@ -10,11 +10,12 @@
 }
 
 body {
+  margin: 0;
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: white;
-  background: linear-gradient(#de6262, #ffb88c);
+  background: linear-gradient(#3c3939, #929292);
 }
